--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.patches import Rectangle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +66,12 @@
    "source": [
     "Предварительное распределение по печкам\n",
     "\n",
-    "<image src=\"Example.png\"/>"
+    "<image src=\"./etc/Example.png\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -264,16 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.patches import Rectangle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
